config/network-policies/allow/allow-crowdsec-logs.yaml
# Allow CrowdSec to read logs
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-crowdsec-logs
  namespace: security
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: logging
      ports:
        - protocol: TCP
          port: 3100
