config/network-policies/allow/allow-linkerd-control-plane.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: linkerd-allow-control-plane
  namespace: linkerd
  labels:
    app.kubernetes.io/name: linkerd
    policy-type: allow
spec:
  podSelector:
    matchLabels:
      linkerd.io/control-plane-ns: "true"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 4191
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: linkerd-viz
      ports:
        - protocol: TCP
          port: 4191
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
