config/network-policies/allow/allow-linkerd-sidecar.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-linkerd-sidecar
  namespace: apps
  labels:
    app.kubernetes.io/component: service-mesh
    policy-type: allow
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              linkerd.io/control-plane-ns: "true"
        - podSelector: {}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              linkerd.io/control-plane-ns: "true"
        - podSelector: {}
