config/network-policies/allow/allow-litmus-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: litmus-allow-webhook
  namespace: litmus
  labels:
    app.kubernetes.io/name: litmus
    policy-type: allow
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: litmus
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: TCP
          port: 443
