config/network-policies/allow/allow-secrets-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: secrets-allow-egress
  namespace: secrets
  labels:
    app.kubernetes.io/name: infisical
    policy-type: allow
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: infisical
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: databases
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 6379
