config/network-policies/allow/allow-tempo-ingress.yaml
# Allow Tempo to receive traces from OTEL Collector
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tempo-ingress
  namespace: tracing
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: tracing
      ports:
        - protocol: TCP
          port: 3200
        - protocol: TCP
          port: 4317
        - protocol: TCP
          port: 4318
